--- a/index.html
+++ b/index.html
@@ -3,17 +3,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>New Tab</title>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"
-		/>
+		<link href="https://cdn.bootcss.com/bulma/0.8.2/css/bulma.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="./style.css" />
-		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-		<style>
-			.child {
-				margin: 0.5em 0.75em;
-			}
-		</style>
+		<script src="https://cdn.bootcss.com/vue/2.6.11/vue.min.js"></script>
 	</head>
 	<body>
 		<section id="app" class="section">
