--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>New Tab</title>
+		<title>Start Pages</title>
 		<link href="https://cdn.bootcss.com/bulma/0.8.2/css/bulma.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="./style.css" />
 		<script src="https://cdn.bootcss.com/vue/2.6.11/vue.js"></script>
 	</head>
 	<body>
 		<section id="app" class="section">
+			<button @click="reset" style="position: fixed;top:3em;right:7em">恢复</button>
 			<div class="container">
 				<h1 class="title">
-					Hello Vincent!
+					Hello {{user.name}}!
 				</h1>
 				<br />
 				<p class="subtitle">
@@ -34,7 +35,13 @@
 									@dragstart="dragStart($event, lists.list, index)"
 									@dragEnd="dragEnd"
 								>
-									<a :href="list.src">{{list.title}}</a>
+									<a
+										:href="list.src"
+										v-text="list.title"
+										@blur="list.title = $event.target.innerText||list.src"
+										@contextmenu.prevent=""
+										@click.right="clickRight"
+									></a>
 								</li>
 								<!-- 如果有子节点 -->
 								<li
