deploy: 945c869a74064029a79ef613098e51bccef160bf

--- a/index.html
+++ b/index.html
@@ -1,46 +1,1 @@
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>New Tab</title>
-		<link href="https://cdn.bootcss.com/bulma/0.8.2/css/bulma.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="./style.css" />
-		<script src="https://cdn.bootcss.com/vue/2.6.11/vue.min.js"></script>
-	</head>
-	<body>
-		<section id="app" class="section">
-			<div class="container">
-				<h1 class="title">
-					Hello Vincent!
-				</h1>
-				<br />
-				<p class="subtitle">
-					资源导航
-				</p>
-				<div class="columns">
-					<div v-for="lists in nav" class="column">
-						<div class="menu">
-							<h3 class="heading">{{lists.name}}</h3>
-							<ul class="menu-list">
-								<!-- 如果是列表 -->
-								<li v-if="lists.list" v-for="list in lists.list">
-									<a :href="list.src">{{list.title}}</a>
-								</li>
-								<!-- 如果有子节点 -->
-								<li class="child" v-if="lists.child" v-for="child in lists.child">
-									<p>{{child.title}}</p>
-									<ul class="menu-list">
-										<li v-for="list in child.list">
-											<a :href="list.src">{{list.title}}</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<script src="./main.js"></script>
-	</body>
-</html>
+<!DOCTYPE html><html lang=zh-Hans><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>start-pages</title><link href=https://cdn.bootcss.com/bulma/0.8.2/css/bulma.min.css rel=stylesheet><link rel=stylesheet href=./style.css><link href=/css/app.08a96361.css rel=preload as=style><link href=/js/app.0a78e1f0.js rel=preload as=script><link href=/js/chunk-vendors.a4e81f08.js rel=preload as=script><link href=/css/app.08a96361.css rel=stylesheet></head><body><noscript><strong>We're sorry but start-pages doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.a4e81f08.js></script><script src=/js/app.0a78e1f0.js></script></body></html>
