--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,16 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 		<title><%= htmlWebpackPlugin.options.title %></title>
-		<link href="https://cdn.bootcss.com/bulma/0.8.2/css/bulma.min.css" rel="stylesheet" />
 	</head>
 	<body>
 		<noscript>
 			<strong
-				>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly
-				without JavaScript enabled. Please enable it to continue.</strong
-			>
+				>We're sorry but doesn't work properly without JavaScript enabled. Please enable it
+				to continue. <br />
+				很抱歉，如果未启用JavaScript，<%= htmlWebpackPlugin.options.title %> 无法正常工作。
+				请启用它以继续。
+			</strong>
 		</noscript>
 		<div id="app"></div>
-		<!-- built files will be auto injected -->
 	</body>
 </html>
